--- a/style.css
+++ b/style.css
@@ -13,6 +13,33 @@ section {
     transition: opacity 0.5s ease;
   }
 
+.hero-heading {
+    background: linear-gradient(135deg, #f87a7a, #f792ee); /* soft pink background */
+    padding: 25px 35px;
+    border-radius: 20px;
+    color: #ad2929e7;
+    font-family: 'Segoe UI', cursive, sans-serif;
+    text-align: center;
+    max-width: 800px;
+    margin: 5px auto;
+    box-shadow: 0 4px 15px rgba(51, 38, 40, 0.3);
+    font-size: 2rem;
+}
+
+.hero-heading {
+    opacity: 0;
+    transform: translateY(-20px);
+    animation: fadeSlideIn 1s ease forwards;
+}
+  
+@keyframes fadeSlideIn {
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+}
+  
+
 .hover-pic {
     width: 300px; /* or however you sized it */
     height: auto;
@@ -43,7 +70,7 @@ button {
     border: none;
     border-radius: 20px;
     cursor: pointer;
-    box-shadow: 0 4px 10px rgba(255, 182, 193, 0.4);
+    box-shadow: 0 4px 10px rgba(46, 33, 35, 0.4);
     transition: all 0.3s ease;
 }
   
@@ -79,7 +106,7 @@ button:hover {
     padding: 10px 14px;
     background: #d63333;
     border-radius: 20px;
-    box-shadow: 0 0 15px rgba(255, 192, 203, 0.4);
+    box-shadow: 0 0 15px rgba(19, 13, 14, 0.4);
     z-index: 100;
     max-width: 400px;
     margin: auto;
