--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ section {
     padding: 25px 35px;
     border-radius: 20px;
     color: #ad2929e7;
-    font-family: 'Segoe UI', cursive, sans-serif;
+    font-family: 'Segoe UI', sans-serif;
     text-align: center;
     max-width: 800px;
     margin: 5px auto;
